tests/fixtures/BinaryOperationLiteralTests/errors/nir_and_char.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(Nir + 'a')

